<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">GrumpyChat</string>
    <string name="firebase_url">https://testda401a.firebaseio.com</string>

    <!-- Start activity -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="no_account">No account?</string>
    <string name="reg_desc">Don\'t worry! Registration is free.
        \nJust create your account with an email and a password and you\'re good to go!</string>

    <!-- Main activity -->
    <string name="version">Version 1.234</string>
    <string name="app_desc">An app for all of your chat needs.
        \nGrumpy Chat is the devil-born offspring of an internet meme and is,
        in reality, just an simple chat app.</string>
    <string name="send">Send</string>
    <string name="log_out">Log out</string>
    <string name="about">About</string>
    <string name="groups">Groups</string>
    <string name="new_group">New group</string>

    <!-- Error messages -->
    <string name="enter_both">Enter both email and password</string>
    <string name="login_unsuccessful">Login unsuccessful</string>
    <string name="email_taken">Email already exists</string>
    <string name="reg_unsuccessful">Registration unsuccessful</string>
    <string name="invalid_pass">Invalid password</string>
    <string name="name_unvalid">Name is unvalid</string>
    <string name="message_empty">Message is empty</string>

</resources>
